[project]
name = "latest_ai_development"
version = "0.1.0"
description = "latest-ai-development using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "boto3>=1.38.34",
    "crewai[tools]>=0.126.0,<1.0.0",
]

[project.scripts]
latest_ai_development = "latest_ai_development.main:run"
run_crew = "latest_ai_development.main:run"
train = "latest_ai_development.main:train"
replay = "latest_ai_development.main:replay"
test = "latest_ai_development.main:test"

[build-system]
requires = ["hatchling", "uv"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src/latest_ai_development/*.py",
    "src/latest_ai_development/config/*",
    "src/latest_ai_development/tools/*"
]

[tool.crewai]
type = "crew"
entrypoint = "src.latest_ai_development.crew:LatestAiDevelopment"
